--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -1,9 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732995.md#1" target="_blank">不惧中共打压 波特王蔡英文合拍第二部片发布</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732995.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/24a8ed573d1111bad553a11fcce20174-150x120.jpg" align ="left"></a>网路名人“波特王”日前与中华民国总蔡英文拍片，中国合作企业徐州自由自在网络科技有限公司要求不能出现“总统”，双方因此解约。波特王与蔡总统合作拍的第二只片12月19日公布，他在高雄担任街访活动主持人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732231.md#1" target="_blank">首阶段美中贸易协议达成后 中方采购美大豆</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/f3a3ca777f3bd568f057edd11d1b582f-150x120.jpg" align ="left"></a>美中达成首阶段贸易协议后，传出中国重新向美国采购大批大豆。英媒引述美国出口商报导，17日已向中方售出约12万吨大豆。另有中国交易商称，至少订购6艘船大豆，总数相当于40万吨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 4:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732101.md#1" target="_blank">选前22天 台湾对抗红媒渗透 空前激战</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11732101.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ff5e11fb30c42496fc25a3236006c24f-150x120.jpg" align ="left"></a>随着台湾2020总统大选进入倒数阶段，台湾对抗中共渗透媒体、影响舆论一役，正在空前激战。美国非营利组织“保护记者委员会”12月16日发表报告提到，香港和台湾的新闻自由正遭受中共巨大压力与影响。报告指，台湾总统大选逼近，中共藉商业压力影响媒体，企图影响社会舆论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 3:44 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731529.md#1" target="_blank">脆弱美中贸易协议凸显中共内部分裂</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731529.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4d09fc2d8d66de2edc8e9aa7ad7cb72f-600x400-1-150x120.jpg" align ="left"></a>近期，美中双方达成了“第一阶段的贸易协议”。但中共大外宣及左派网站都在攻击或看衰这份贸易协议，凸显了中共内部分裂。外媒认为，这份协议脆弱的原因之一，是中共历来不遵守承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:37 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731504.md#1" target="_blank">英国敦促北京与港人对话 兑现联合声明承诺</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731504.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LT8PG-150x120.jpg" align ="left"></a>当地时间周四（12月19日），英国政府发表一份声明，敦促中共当局与香港抗议者展开对话，并尊重中方于35年前在《中英联合声明》中所作的承诺。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 9:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731266.md#1" target="_blank">美媒：《中国日报》在美非法投放中共宣传物</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731266.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51951054-600x400-150x120.jpg" align ="left"></a>熟悉美国外国代理人注册申请的专家指出，中共国家媒体《中国日报》（海外版，China Daily）没有遵守联邦法律，公开其在《纽约时报》、《华盛顿邮报》等美国报纸上的宣传费。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 8:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731332.md#1" target="_blank">习抵澳当天香港8人死亡 澳门形同戒严</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731332.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N57V5-150x120.jpg" align ="left"></a>为了因应中共主席习近平12月18日至20日到访出席澳门主权移交20周年典礼，早在半年前，澳门就加强了保安防范措施，最近这一周，港澳关口保安检查更是形同戒严。外界关注北京将宣布带给澳门的新政策：要从博彩业转型到旅游业和金融中心，实际能否做到？而就在习出访澳门当天，香港却连发“尸体发现案”和严重车祸事件共致8人身亡，被指是很不吉利的兆头。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 7:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731242.md#1" target="_blank">王宗尧当一日渣哥店长 营业额悉数捐6.12基金</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11731242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/170705084602100311-150x120.jpg" align ="left"></a>18日，艺人王宗尧现身香港九龙湾，为谭小环及其丈夫蔡强荣（Eric）开设的连锁式小食店“渣哥一九九六”担任义务店长，吸引不少市民前来就餐并纷纷与他合照。当天，“渣哥”在facebook（FB）公布消息，将王宗尧工作三小时1万港元的营业额悉数捐出，王宗尧当场提议将钱捐给“6.12人道支援基金”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 6:44 AM							</td></tr>
@@ -32,14 +27,25 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank">【新闻看点】习访澳宣布新政？惠誉降澳评级</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/08/308300450938-150x120.jpg" align ="left"></a>习到访澳门，路透社独家报导，可能会宣布一系列“惠澳”措施。不过就在习行将动身前夕，国际评级机构惠誉昨天（12月16日）发表了评级报告，把澳门的评级展望由“稳定”下调至“负面”，让北京出了洋相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728802.md#1" target="_blank">美驻华使馆推文：在中国境外 也受中共监控</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728802.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/c098732f9da5c7128ae86118aeb6418a-150x120.jpg" align ="left"></a>美国驻华使馆12月16日发推文说，一项新的报告指出，中国（中共）对网络自由的压制全球最严重，即使是中国境外的人也不安全。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:23 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728642.md#1" target="_blank">“火狐狸”视频暴红 却是官媒造假</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728642.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-11-150x120.jpg" align ="left"></a>中共官媒“中新网”周日刊登一段网传视频，称在黑龙江漠河市的公路上发现一只毛色鲜红的狐狸在雪中觅食，视频被纷纷转载。但随后被发现这段视频经过调色，拍摄地也不是黑龙江。“中新网”被迫公开道歉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731683.md#1" target="_blank">【翻墙必看】高级五毛花千芳为何遭网民嘲讽</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728616.md#1" target="_blank">美政府将出台法规 限向中国出口敏感技术</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728616.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Commerce_Building_view_from_Mall_2-150x120.jpg" align ="left"></a>路透社看到的一份文件显示，川普（特朗普）政府正在敲定一套出口收紧规则，以限制向中国等国出口先进技术。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank">港人给抗议者们写圣诞卡：以后再庆祝</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg" align ="left"></a>香港民主运动持续进行。圣诞节将近，抗议者们没有因此放松，在坚持抗争的同时，他们还不忘给受伤和被拘留的手足们写圣诞贺卡，送上自己的一份鼓励和祝福。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 11:17 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728394.md#1" target="_blank">增购美农产品 传北京拟取消乙醇报复关税</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728394.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2006/06/606011244111703-150x120.jpg" align ="left"></a>多数专家关注，北京如何兑现未来两年内增购至少320亿美元美国农产品的承诺。根据目前传出的更多细节，中方拟取消对美国乙醇所实施的报复性关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 10:47 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank">大马前总理卷入新案 涉下令谋杀蒙古模特</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728275.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/GettyImages-991185274-150x120.jpg" align ="left"></a>深陷腐败指控的马来西亚前总理纳吉布·拉扎克（Najib Razak），近日又被卷入了一桩谋杀蒙古模特的丑闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:30 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727147.md#1" target="_blank">【翻墙必看】PCC雇用薄瓜瓜“令人吃惊”</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/08/1204120831291758-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
 
-1.五毛花千芳曝中共经济衰败 母亲养老证遭收缴
-中共“高级五毛”花千芳日前再次口无遮拦，在微博上披露辽宁省抚顺市当局收缴了他母亲的养老保险证书，其言论则透露出当地经济严重恶化的状况。
+1.薄熙来之子薄瓜瓜 最新行踪曝光
+在公众视野中消失了很久的薄熙来的儿子——薄瓜瓜，正在加拿大鲍尔集团股份有限公司（Power Corporation of Canada，简称 PCC）工作。有人认为，PCC雇用薄瓜瓜是为了保持和中共权贵的关系。
 
-2.海风：澳门取代香港，又是一场政治闹剧
-顺我者昌，逆我者亡。这是中共独裁者的天性。香港不听话，中共就要把它国际金融中心的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 9:00 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731657.md#1" target="_blank">清华大学90后共青团官员校内溺亡</a><br></h3>日前，90后的清华大学团委科创中心主任朱某（朱小亮）在校园内坠河身亡的消息，引发外界关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 10:42 AM							</td></tr>
+2.中共走投无路 军队押送“中美协议”过关
+经过18个月的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 9:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727486.md#1" target="_blank">《环球时报》新媒体部主任自曝 被拒发美签</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727486.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-143452837-150x120.jpg" align ="left"></a>中共喉舌《环球时报》的新媒体部主任郝珺石于周一（12月16日）在微博上自曝，他申请美国签证被拒绝，结果引来大批网民的嘲讽。
+
+郝珺石在微博上说，他被美国驻华大使馆拒签了。他还出示美国驻华大使馆的拒签通知书。
+
+该通知书表示，郝珺石不具备申请非移民签证的资格。他没有提供他在本次访美行程结束之后不得不回国的证明。
+
+该通知书还说，这次的拒签不可以上诉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 2:35 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11729559.md#1" target="_blank">中共航母山东舰交付仪式 多名高官缺席</a><br></h3>日前，中共第一艘航空母舰山东舰交付海军。这次交付仪式打破了以往的几个惯例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:07 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11727611.md#1" target="_blank">河南许昌公安局副局长彭杰投案被调查</a><br></h3>12月17日，官方通报，许昌市公安局党委委员、副局长、正县级侦查员彭杰涉嫌严重违纪违法，已主动投案，目前正接受调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月17日 7:31 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mchnr2468/djy/blob/master/gb/ncid277_5.md#1<br><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncid277_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mchnr2468/djy/blob/master/gb/ncid277_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_5.htm">http://www.epochtimes.com/gb/ncid277_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
