--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/mchnr2468/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mchnr2468/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mchnr2468/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1" target="_blank">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745226.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3ae3a4cb58f224622c32e15a2a07d2a7-e1508124610232-150x120.jpg" align ="left"></a>中国大陆再传严重“医闹”事件。12月24日清晨，北京民航总医院一女医师遭病患家属持刀刺颈，因伤势过重25日去世。目前嫌犯被刑拘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745295.md#1" target="_blank">贸易战暂休战 中国11月进口256万吨美大豆</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745295.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/04be570d8c9cd2f39561d9b88a98ebe2-150x120.jpg" align ="left"></a>中国11月从美国购买大豆数量同比激增，此前，中国进口商进口美国大获得当局的免税配额。同时，美中双方对签署第一阶段贸易协议持乐观态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745307.md#1" target="_blank">川普与第一夫人发表圣诞致辞 全文翻译</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745307.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186649027-1-150x120.jpg" align ="left"></a>12月25日圣诞节，川普（特朗普）总统与第一夫人梅拉尼娅发表贺词。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:53 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745210.md#1" target="_blank">中国对美稀土磁铁出口11月锐减</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/cdd65c622ffbad1893ec97851770c2cf-150x120.jpg" align ="left"></a>在中美双方达成第一阶段贸易协议后，来自美国海关数据最新的数据显示，11月份中国对美国稀土磁铁出口量环比下降21.2％。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:47 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744743.md#1" target="_blank">蔡英文：台湾忧中共渗透 反渗透法不是戒严</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744743.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X7847-150x120.jpg" align ="left"></a>立法院民进党团预计在12月31日的院会上，拼“反渗透法”三读通过。总统蔡英文25日在总统候选人政见发表会提到，像反渗透法这样的立法，许多民主国家已经在做，“把反渗透法当作戒严，北京会欣慰，但国际社会将觉得不可思议。”她也说，若不认同该法案的立法，应提出具体的说明，“不应只有空洞的形容词。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743842.md#1" target="_blank">【十字路口】五项主因 港台掀青年抗争潮</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743842.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e3a04f354fb41f_ttl7daysPl_20191225-____-DJY-150x120.jpg" align ="left"></a>平安夜再抗争 香港台湾为何掀“青年抗争潮”？港警不作为，抗争者要当心黑手段？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:08 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742729.md#1" target="_blank">曾遭40种酷刑 医生伍群再被劫入永川监狱</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742729.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2010-9-26-featurephotos-64_fLC3ND3-1-150x120.jpg" align ="left"></a>重庆法轮功学员伍群因坚持信仰被非法劳教、判刑，曾遭受40多种酷刑折磨，于2018年11月28日再度被绑架并非法判刑3年半，至今仍被被关押在永川监狱，家属不得见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:46 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742862.md#1" target="_blank">【2019盘点】中国十大富豪的生死劫</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-519325352-600x400-150x120.jpg" align ="left"></a>2019年快要结束了。这一年对大陆的企业，特别是民营企业来说，它面临着经营的寒冬及“国进民退”的困境。不少昔日风光的大佬、富豪，有的被抓、有的自杀、有的陷入丑闻……结局令人不胜唏嘘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 9:44 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743919.md#1" target="_blank">【翻墙必看】盘点2019中共搞砸的大事件</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743919.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912081048222188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
 
 1.【名家专栏】2020：中共性命攸关的一年
@@ -19,18 +27,10 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743575.md#1" target="_blank">湖南“12·4”大爆炸 死者家属：政府抢尸</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743575.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/23fef3cadf40c4b281820a324b857182-150x120.jpg" align ="left"></a>湖南省浏阳市碧溪烟花制造有限公司石下工区包装作业区域于12月4日7时许发生爆炸事故，造成13人死亡、13人受伤（其中重伤3人）。日前，当局通报了“12·4”事故情况。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743400.md#1" target="_blank">纳瓦罗：贸易协议意味着2020美经济繁荣</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_14J2M9-150x120.jpg" align ="left"></a>白宫贸易顾问彼得·纳瓦罗（Peter Navarro）周二（12月24日）表示，中美第一阶段贸易协议、美国-墨西哥-加拿大协议（USMCA）以及即将与日本、韩国达成协议的成功，加上《2020财年国防授权法案》，一起将预示着2020年美国经济的“繁荣”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:54 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank">【2019盘点】中共军事扩张 难挽危局</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1804260453522378-150x120.jpg" align ="left"></a>2019年中共军事领域动作频繁。在庞大的军费支撑下，首艘自制航母服役、北斗三号全球系统核心星座建成等，标志着中共军队武器装备系统和国防科工系统的持续扩张；两次大阅兵、军改后的首部国防白皮书、强化南海军事部署、升级对台军事威胁等等，将其全球野心暴露无遗；中俄军事合作提升，中美军事竞争加剧，而中共仍强硬拒绝参加中美俄三方军备控制谈判；“军改”进入“第三战役”，举.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743447.md#1" target="_blank">江苏银行免费为储户磨刀 次日活动竟被取消</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743447.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-457504892-150x120.jpg" align ="left"></a>“银行门还没开，一帮人手里都拎着一把刀具，跃跃欲试地盯着门里面……”，这并非是电影中抢劫银行的片段，而是无锡市一家银行愿为储户免费磨刀，在发出邀请后即将上演的场景。但时隔不久，这项活动突然被叫停。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742592.md#1" target="_blank">中共不可靠 布拉格市长：与其打交道应三思</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742592.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X6508-150x120.jpg" align ="left"></a>捷克首都布拉格市长贺瑞普（Zdeněk H?ib）反对中共对台湾的“一中条款”，并取消与北京姐妹市的关系，改与台北缔结姐妹市。贺瑞普在近日投书美国媒体，提到他从与中共的外交关系中学到两件事情，而他也得出一项结论，“中共是不可靠的商业伙伴，也是一个充满怨恨的群体。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank">人权问责法效应 中共迫害者被举报到海外</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11741100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/11-18-150x120.jpg" align ="left"></a>自《通告》发布后，明慧网收到大量的对参与迫害法轮功的中共高官、政法委和“610”人员、法官、检察官、派出所所长等等的举报信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743457.md#1" target="_blank">【新闻看点】曾吁中共下台 北大教授再喊话</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743457.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/1310072319351528-150x120.jpg" align ="left"></a>今年的这个平安夜和圣诞节，北京又增加了一份痛苦。北京大学教授郑也夫22日在“纵览中国”发文，声明将向全国人大提出方案，让科级以上的官员在规定日期申报财产及受贿情况。并且要督促中共政治局的七大巨头带头公示，以自证清白、垂范官场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743455.md#1" target="_blank">【新闻看点】蔡英文一年大翻盘 北京功劳不小</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7f9b591118d116d264a3e33e71e838cc-150x120.jpg" align ="left"></a>蔡英文选情一年内大反转，有朋友调侃，这应该“感谢”北京当局的“鼎力相助”，如果不是北京“助选”，蔡英文取胜很难。台湾大选，北京为什么“助选”，又是如何助选的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743325.md#1" target="_blank">外资加速离华 美企41%要撤 1/3不想投资</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743325.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/20190514-HUAMING-HONGKONG-03-150x120.jpg" align ="left"></a>众多外资企业正在加快撤出中国市场，一项调查显示，超过40%在华美资企业正计划移出中国，超过30%推迟或取消在华投资。欧洲和日韩台等国移出中国的企业也正在增加。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743361.md#1" target="_blank">18年销量冠军 近6年亏损 夏利轿车退出A股</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a-2-150x120.jpg" align ="left"></a>夏利曾连续18年占据销量冠军宝座，称得上是“国民轿车”的鼻祖。近6年来连续亏损80亿（人民币，下同），上市20年的夏利最终以“卖壳”的形式黯然离场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743273.md#1" target="_blank">中国多地禁过圣诞 藉历史宣传“仇恨”</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743273.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-1-1-150x120.jpg" align ="left"></a>随着西方最大的传统节日——圣诞节的到来，西方国家都洋溢着节日的气氛。然而中国则是另一番景象，各地纷纷发文件，禁止公共场所过洋节，有的更要学习八国联军入侵历史，借机宣传“仇恨”和“耻辱”，而家庭教会也遭遇比去年更加严厉的控制。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745026.md#1" target="_blank">明日将现日环食 大陆、台湾等地可见日偏食</a><br></h3>12月26日将有日环食天象，中国大陆各地以及台湾等可见日偏食，即俗称天狗食日。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744898.md#1" target="_blank">河南一公示名单泄露3260人身份证号码</a><br></h3>去年，中共河南省信阳市商城县民政局在公示名单时，将3千多位民众完整的身份证号码泄露出去。当被质问是否泄露公民隐私时，当局工作人员称这个不算是泄露隐私。此事引起网民热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744548.md#1" target="_blank">2020年天津报纸《城市快报》将休刊</a><br></h3>2019年新年第一天，多家大陆报纸传出停刊的消息。2019年年底、接近2020年1月1日之际，天津媒体《城市快报》宣布将在2020年休刊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744109.md#1" target="_blank">重庆男子坠楼砸中2女中学生 3人均死亡</a><br></h3>12月24日晚，重庆沙坪坝区一男子在三峡广场煌华新纪元购物广场坠亡，砸倒两名过路人，3人均死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744043.md#1" target="_blank">每日三退声明精选（2019/12/24）</a><br></h3>出国旅游，国外的民主自由，中国的欺骗谎言，形成鲜明对比，声明退出少先队、共青团、共产党一切组织，不做它的牺牲品！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743385.md#1" target="_blank">王毅马云最新表述 佐证中共经济遇严重寒冬</a><br></h3>香港的一位企业家周先生表示，中国被认为世界第二大经济体，为何王毅会这样谦虚？道出背后原因，其实中共经济问题严重，已没可用外汇储备，“在三万一千亿美金储备中，中国祇有四千五百亿美金可用，其实依照日本的报告，中国现在是负1.5万亿美金外债，根本无外汇储备。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mchnr2468/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/mchnr2468/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mchnr2468/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
