--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11729841.md#1">【直播回放】2020中华民国总统大选辩论</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752702.md#1">NASA女太空人创纪录 在太空驻留时间最长</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751864.md#1">内蒙古公安警官枪杀两副局长 当局封口</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751850.md#1">中国内衣大王断崖式亏损 4年关店1500家</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11751781.md#1">【热点互动】松绑户籍防范失业潮 危机来临？</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745223.md#1">纽约法轮功学员向李洪志师父恭贺新年（下）</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752769.md#1">北京各行业利润下滑 房价由高位下跌近两成</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752654.md#1">长沙动物园发生大象踩人事故 一驯兽员身亡</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752635.md#1">程晓容：台海两岸关系的走向由谁主导？</a><br>
