--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -33,7 +33,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752311.md#1">【翻墙必看】内蒙古公安警官开枪打死两官</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752956.md#1">【直播中】12.29“香港人抗争的日与夜”集会</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752699.md#1">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752863.md#1">台大选辩论 聚焦一国两制、香港、反渗透法</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752863.md#1">中华民国要万岁 蔡英文：要靠自主经济</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752375.md#1">大陆干旱持续数月 江西近33万人饮水困难</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/18/n11729841.md#1">【直播回放】2020中华民国总统大选辩论</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752702.md#1">NASA女太空人创纪录 在太空驻留时间最长</a><br>
