--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -24,15 +24,9 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743741.md#1" target="_blank">袁斌：是中共发言人而不是别人在编造闹剧</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743741.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5c7775e5c84b3862d88dfe295b764e53@1200x1200-150x120.jpg" align ="left"></a>日前，英国伦敦一名叫弗洛伦斯·维迪科姆的6岁女童打开从大型超市便利店连锁Tesco（中国前称乐购，又译特易购）购买的圣诞贺卡，准备给同学写祝福时，不料竟突然发现其中一张贺卡已经“写好了”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743719.md#1" target="_blank">【名家专栏】2020：中共性命攸关的一年</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743719.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-871930170-600x400-150x120.jpg" align ="left"></a>有句俗话说：“一只受伤的熊，要比一只健康的熊更危险。”（或者在当前情况下，是熊猫？）这句广为流传的格言背后的逻辑很简单，那就是说，甚至是软弱的对手一旦被逼入绝境，都更有可能以更加绝望和不可预测的方式行事。因此，它们可能给竞争对手带来更大的风险。当然，这只是一个概括的说法，但无疑，其中也存在着一些智慧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:24 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank">【2019盘点】中共军事扩张 难挽危局</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1804260453522378-150x120.jpg" align ="left"></a>2019年中共军事领域动作频繁。在庞大的军费支撑下，首艘自制航母服役、北斗三号全球系统核心星座建成等，标志着中共军队武器装备系统和国防科工系统的持续扩张；两次大阅兵、军改后的首部国防白皮书、强化南海军事部署、升级对台军事威胁等等，将其全球野心暴露无遗；中俄军事合作提升，中美军事竞争加剧，而中共仍强硬拒绝参加中美俄三方军.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:49 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748411.md#1" target="_blank">吐为快：挥别二O一九</a><br></h3>港遭蹂躏魂魄丧，党临末日分外狂
-非我族类岂怜悯，为延残喘狗跳墙
-明珠有泪傀煽情，被杀无声官诌谎
-民卫自由仁义长，妖推专制臭名扬
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743529.md#1" target="_blank">周晓辉：美公开斩首行动画面 平壤北京需掂量</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743529.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019122301572-600x394-1-150x120.jpg" align ="left"></a>针对日前朝鲜扬言的要在圣诞节期间给美国送上一份“大礼”，美国除了提高戒备、派侦察机侦查朝鲜动向、与日韩沟通等外，还于12月23日突然公开了外界很难看到的部分演习画面。据韩国《朝鲜日报》报导，该画面展示的是驻韩美军特种作战司令部与韩军特战队员于11月在群山基地进行的入境朝鲜并生擒其领导人的场景。
 
-中困贸战忧匪祚，美挥税鞭燃烽火
-易反易覆缘狼性，姓私姓国凭邪说
-红谎破灭难为继，倿心险恶偏向左
-格其非心方男儿，抱残守缺自招祸......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:03 PM			</td></tr>
+显然，对于朝鲜是将.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:50 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748249.md#1" target="_blank">任世豪：中共颠倒是非善恶</a><br></h3>近日明慧网有数则报导，让人看清了在中共统治下，是非善恶一概反转，世道彻底颠倒崩解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11748226.md#1" target="_blank">陈达：中共“外扰神韵内禁圣诞”自证是妖孽</a><br></h3>今岁圣诞节，又现神韵热。
 扩至七个团，订票五洲火。
