--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -2,8 +2,8 @@
 <tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11725027.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2015/05/1505280313001758-320x200.jpg">【内幕】中共如何将全球港口和商船变武器</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744649.md#1">英预言家：2020年中国发生革命 川普连任</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743411.md#1">中共尽失人心 反习势力与保习派激战</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745443.md#1">摩托车横穿李克强车队 险酿意外</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/28/n11750678.md#1">夏小强：台总统候选人政见会结束 大势已定</a><br>
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745443.md#1">摩托车横穿李克强车队 险酿意外</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11741034.md#1">【新闻看点】习访澳魂系香港 3真相北京心凉</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/22/n11738852.md#1">圣诞卡求救信发酵 乐购暂停从中国进货</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/mchnr2468/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753291.md#1">历史即将翻开新页 痛忆香港抗争者的创伤</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753384.md#1">经济压力大 港府再加码支持中小企业</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11753365.md#1">镇政府食堂现熊掌、猫头鹰 领导工作餐？</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752311.md#1">【翻墙必看】内蒙古公安警官开枪打死两官</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752702.md#1">NASA女太空人创纪录 在太空驻留时间最长</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744836.md#1">【2019盘点】中国十大网络热点新闻</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752148.md#1">港警官吐露心声：被迫处于冲突中心 支持调查</a><br>
-<a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752042.md#1">【珍言真语】薛浩然：不想香港沉没 只能团结</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752769.md#1">北京各行业利润下滑 房价由高位下跌近两成</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752654.md#1">长沙动物园发生大象踩人事故 一驯兽员身亡</a><br>
 <a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/29/n11752635.md#1">程晓容：台海两岸关系的走向由谁主导？</a><br>
