--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -26,7 +26,7 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744649.md#1" target="_blank">英预言家：2020年中国发生革命 川普连任</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744649.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_145654088_Subscription_L-150x120.jpg" align ="left"></a>曾经成功预言川普（特朗普）当选美国总统的英国预言家汉密尔顿-帕克（Craig Hamilton-Parker）表示，在即将来到的2020年，川普将会连任总统职务，而中国则会发生革命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:26 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743195.md#1" target="_blank">余文生案秘审逾8个月 许艳平安夜千里救夫</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743195.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG-20191224-WA0004-150x120.jpg" align ="left"></a>“这已是第十次去徐州看望余文生律师。”12月23日，许艳与王宇、蔺其磊律师及两名公民，驾车穿越1600多里路，到达江苏省徐州市，向省高院提出控诉，要求立即无条件释放余文生律师。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743998.md#1" target="_blank">假疫苗受害儿豆豆走了 陕西当局屏蔽讯息</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743998.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/S__5898248-600x400-150x120.jpg" align ="left"></a>陕西凤县5岁女孩雷鑫睿(小名豆豆)，11个月大时打了一剂武汉生物出产的A群流脑疫苗后，导致四肢瘫痪、意识丧失、眼睛失明。在病痛中痛苦折磨了四年，于上周二永远离开了这个世界。到最后一刻仍然得不到一个公道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank">【拍案惊奇】不平夜全港乱战 传2人坠楼警在场</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11743804.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191225666-150x120.jpg" align ="left"></a>正如大家在新闻上看到的，本来是平安夜，和开心的圣诞节日，但香港街头并不平安。这场抗争运动已经快满7个月了，从当晚的情况来看，势必要延续到新年。那么今天的节目，我们还是以专题形式推出，来回顾这一夜在香港，都发生了什么。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745633.md#1" target="_blank">周杰伦MV奶茶店 大陆现110多家山寨门市</a><br></h3>由歌手周杰伦MV捧红的奶茶店，如今在中国遭到山寨包围。全中国目前有110多家山寨的“麦吉 machi machi”加盟店，上海、广州、深圳等地都有冒牌货。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11745026.md#1" target="_blank">明日将现日环食 大陆、台湾等地可见日偏食</a><br></h3>12月26日将有日环食天象，中国大陆各地以及台湾等可见日偏食，即俗称天狗食日。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744898.md#1" target="_blank">河南一公示名单泄露3260人身份证号码</a><br></h3>去年，中共河南省信阳市商城县民政局在公示名单时，将3千多位民众完整的身份证号码泄露出去。当被质问是否泄露公民隐私时，当局工作人员称这个不算是泄露隐私。此事引起网民热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/25/n11744548.md#1" target="_blank">2020年天津报纸《城市快报》将休刊</a><br></h3>2019年新年第一天，多家大陆报纸传出停刊的消息。2019年年底、接近2020年1月1日之际，天津媒体《城市快报》宣布将在2020年休刊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:03 PM							</td></tr>
