--- a/gb/ncid277_5.md
+++ b/gb/ncid277_5.md
@@ -30,7 +30,7 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728981.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/HKDJY20191218A01_v4_cut-150x120.jpg" align ="left"></a>广东茂名建火葬场事件再爆发激烈冲突。上周，播扬镇民众怀疑政府故伎重施，以建净化水设施为由在当地修建火葬场，引发村民强烈抵制，并发生激烈警民冲突和流血事件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728815.md#1" target="_blank">澳门迎习如临大敌 轻轨停运 运油车禁驶</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728815.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1052915588-150x120.jpg" align ="left"></a>国家主席习近平星期三将到访澳门，澳门当局如临大敌，部分澳门线路轻轨停运，油车禁驶导致车主“加油”也受限制。而澳门街头及巴士上，到处都有“天眼”监控。港珠澳大桥的安检之严密更是史上首见。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726557.md#1" target="_blank">美国会通过国防授权法案 7大看点一次看懂</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/16/n11726557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1003182344381160-600x400-1-150x120.jpg" align ="left"></a>周一（12月16日），美国国会参议院通过了7380亿美元的2020财年“国防授权法案”（NDAA）。该法案除了提到组建太空军、提升美军薪酬之外，还涉及诸多中国相关议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11733354.md#1" target="_blank">两岸密使 叶选宁牵线台湾官员密会杨尚昆</a><br></h3>中共总政联络部前部长叶选宁、台湾总统府前资政曾永贤先后去世后，他们从1992年开始担任“两岸密使”的事实被证实。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 6:52 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank">【新闻看点】习访澳宣布新政？惠誉降澳评级</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/17/n11728507.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/08/308300450938-150x120.jpg" align ="left"></a>习到访澳门，路透社独家报导，可能会宣布一系列“惠澳”措施。不过就在习行将动身前夕，国际评级机构惠誉昨天（12月16日）发表了评级报告，把澳门的评级展望由“稳定”下调至“负面”，让北京出了洋相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11733311.md#1" target="_blank">国际人权组织吁加拿大惩罚中共电视台</a><br></h3>总部位于香港和欧洲的人权组织“保障卫士（Safeguard Defenders）”向加拿大广播电视和电信委员会（CRTC）提出了投诉，并呼吁加拿大政府使用《腐败外国官员的受害者法》——加拿大版的《马格尼茨基法》，去惩罚那些负责广播这种认罪供词视频的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/19/n11731683.md#1" target="_blank">【翻墙必看】高级五毛花千芳为何遭网民嘲讽</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
