--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743455.md#1" target="_blank">【新闻看点】蔡英文一年大翻盘 北京功劳不小</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7f9b591118d116d264a3e33e71e838cc-150x120.jpg" align ="left"></a>蔡英文选情一年内大反转，有朋友调侃，这应该“感谢”北京当局的“鼎力相助”，如果不是北京“助选”，蔡英文取胜很难。台湾大选，北京为什么“助选”，又是如何助选的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 4:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11741078.md#1" target="_blank">联合国遭举报配合中共 专家吁改善重视人权</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/23/n11741078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/393369-150x120.jpg" align ="left"></a>联合国一名内部举报人表示，联合国下属机构“人权事务高级专员办公室”，常年向中共提供参加联合国日内瓦会议的人权捍卫者名单。专家表示，联合国功能不彰要求改善，呼吁应重视中共迫害法轮功等中国人权议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11741624.md#1" target="_blank">【翻墙必看】北大教授：七常委先公示财产</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11741624.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/130330204429941-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 9:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11741848.md#1" target="_blank">网传赖小民将百名情妇安置同一小区</a><br></h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11741848.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/160705084919100615-600x398-1-150x120.jpg" align ="left"></a>已被起诉的“华融集团”前党委书记兼董事长赖小民的淫乱史继续被曝光。有知情人士再曝，赖小民曾为百名情妇在企业内安插职位，甚至将所有情妇都安置在同一社区，社区里的孩子都喊他“爸爸”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 2:45 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/27/n11749335.md#1" target="_blank">大庆油罐车爆炸致4死 官方14天未通报</a><br></h3>黑龙江大庆一个县油罐车发生爆炸，事故发生14天后官方仍未通报。爆炸造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/26/n11745929.md#1" target="_blank">【翻墙必看】海内外言论指向习</a><br></h3>中共内外交困之际，中共各派围绕习近平是否将连任等问题展开激战。习成为各派保护和攻击的中心，中共各种不利的消息也都推给了习，习将如何面对这些困局？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 9:55 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11743385.md#1" target="_blank">王毅马云最新表述 佐证中共经济遇严重寒冬</a><br></h3>香港的一位企业家周先生表示，中国被认为世界第二大经济体，为何王毅会这样谦虚？道出背后原因，其实中共经济问题严重，已没可用外汇储备，“在三万一千亿美金储备中，中国祇有四千五百亿美金可用，其实依照日本的报告，中国现在是负1.5万亿美金外债，根本无外汇储备。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 2:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/mchnr2468/djy/blob/master/gb/19/12/24/n11742514.md#1" target="_blank">涉金融犯罪 122名中国人被尼泊尔警方逮捕</a><br></h3>12月24日，尼泊尔警方表示已逮捕了122名中国籍公民。中共外交部发言人耿爽在例行记者会上被问及此事时称，这些人涉嫌从事跨境网络诈骗活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:53 PM							</td></tr>
